--- a/src/ru/gurps/generator/resources/views/modifiers.fxml
+++ b/src/ru/gurps/generator/resources/views/modifiers.fxml
@@ -26,8 +26,8 @@
 
         <TableView fx:id="tableView" layoutY="39.0" prefHeight="360.0" prefWidth="645.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="39.0">
             <columns>
-                <TableColumn fx:id="nameColumn" prefWidth="136.0" text="%name" />
-                <TableColumn fx:id="nameEnColumn" prefWidth="125.0" text="%name_en" />
+                <TableColumn fx:id="modifiersNameColumn" prefWidth="136.0" text="%name" />
+                <TableColumn fx:id="modifiersNameEnColumn" prefWidth="125.0" text="%name_en" />
                 <TableColumn fx:id="maxLevelColumn" minWidth="0.0" prefWidth="84.0" text="%max_level" />
                 <TableColumn fx:id="costColumn" prefWidth="84.0" text="%cost" />
                 <TableColumn fx:id="combatColumn" prefWidth="65.0" text="%combat" />
@@ -50,8 +50,8 @@
 
                 <TableView fx:id="featuresTableView" layoutX="-2.0" prefHeight="134.0" prefWidth="338.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="332.0" AnchorPane.topAnchor="0.0">
                     <columns>
-                        <TableColumn fx:id="titleColumn" prefWidth="176.0" text="%name" />
-                        <TableColumn fx:id="titleEnColumn" prefWidth="161.0" text="%name_en" />
+                        <TableColumn fx:id="featuresNameColumn" prefWidth="176.0" text="%name" />
+                        <TableColumn fx:id="featuresNameEnColumn" prefWidth="161.0" text="%name_en" />
                     </columns>
                 </TableView>
             </children>
