--- a/src/ru/gurps/generator/resources/views/skillFull.fxml
+++ b/src/ru/gurps/generator/resources/views/skillFull.fxml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -17,7 +14,7 @@
          </font>
       </Label>
       <Label fx:id="complexity" layoutX="14.0" layoutY="57.0" prefHeight="16.0" text="%complexity_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="57.0" />
-      <Label fx:id="type" layoutX="14.0" layoutY="41.0" prefHeight="16.0" text="%based_on_parameter: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="37.0" />
+      <Label fx:id="type" layoutX="14.0" layoutY="41.0" prefHeight="16.0" text="%based_on_parameter_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="37.0" />
       <Label fx:id="twoHands" layoutX="24.0" layoutY="67.0" prefHeight="16.0" text="%two_hands_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="117.0" />
       <Label fx:id="parry" layoutX="34.0" layoutY="77.0" prefHeight="16.0" text="%parry_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="137.0" />
       <Label fx:id="parryBonus" layoutX="44.0" layoutY="87.0" prefHeight="16.0" text="%parry_bonus_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="157.0" />
