--- a/src/ru/gurps/generator/resources/views/advantages.fxml
+++ b/src/ru/gurps/generator/resources/views/advantages.fxml
@@ -22,6 +22,7 @@
                 <MenuItem fx:id="searchNameEn" mnemonicParsing="false" text="%name_en" />
                 <MenuItem fx:id="searchCost" mnemonicParsing="false" text="%cost" />
                 <MenuItem fx:id="searchDescription" mnemonicParsing="false" text="%description" />
+                <MenuItem fx:id="reset" mnemonicParsing="false" text="%reset" />
             </items>
         </MenuButton>
         <TextField fx:id="searchText" layoutX="384.0" layoutY="14.0" AnchorPane.rightAnchor="98.0" AnchorPane.topAnchor="7.0" />
