--- a/src/ru/gurps/generator/resources/views/characters/sheet.fxml
+++ b/src/ru/gurps/generator/resources/views/characters/sheet.fxml
@@ -16,7 +16,7 @@
                     <children>
                         <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="6.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../images/gurps.jpg" />
+                                <Image url="@../../images/gurps.jpg" />
                             </image>
                         </ImageView>
                         <Label alignment="CENTER" layoutX="10.0" layoutY="73.0" prefHeight="25.0" prefWidth="192.0" text="%character_sheet">
