--- a/src/ru/gurps/generator/desktop/resources/views/full/info/spellFull.fxml
+++ b/src/ru/gurps/generator/desktop/resources/views/full/info/spellFull.fxml
@@ -24,7 +24,7 @@
       <Label fx:id="maintainingCost" layoutX="34.0" layoutY="77.0" prefHeight="16.0" text="%maintaining_cost_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="97.0" />
       <Label fx:id="thing" layoutX="44.0" layoutY="87.0" prefHeight="16.0" text="%thing_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="117.0" />
       <Label fx:id="demands" layoutX="-5.0" layoutY="220.0" prefHeight="16.0" text="%demands_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="217.0" />
-      <Label fx:id="createCost" layoutX="14.0" layoutY="204.0" prefHeight="16.0" text="%create_cost: " wrapText="true" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="197.0" />
+      <Label fx:id="createCost" layoutX="14.0" layoutY="204.0" prefHeight="16.0" text="%create_cost_colon" wrapText="true" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="197.0" />
       <ScrollPane hbarPolicy="NEVER" layoutX="14.0" layoutY="252.0" prefHeight="313.0" prefWidth="607.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="252.0">
          <content>
             <TextFlow prefHeight="308.0" prefWidth="601.0">
