--- a/src/ru/gurps/generator/desktop/resources/views/tables/spells.fxml
+++ b/src/ru/gurps/generator/desktop/resources/views/tables/spells.fxml
@@ -12,7 +12,8 @@
                 <TableColumn fx:id="nameEnColumn" prefWidth="109.0" text="%name_en" />
                 <TableColumn fx:id="schoolColumn" minWidth="0.0" prefWidth="70.0" text="%school" />
                 <TableColumn fx:id="typeColumn" minWidth="0.0" prefWidth="54.0" text="%types" />
-                <TableColumn fx:id="complexityColumn" prefWidth="87.0" text="%cost" />
+                <TableColumn fx:id="complexityColumn" prefWidth="87.0" text="%complexity" />
+            <TableColumn fx:id="actionsColumn" prefWidth="175.0" />
             </columns>
         </TableView>
 
@@ -26,29 +27,6 @@
             </items>
         </MenuButton>
         <TextField fx:id="searchText" layoutX="381.0" layoutY="14.0" AnchorPane.rightAnchor="101.0" AnchorPane.topAnchor="14.0" />
-
-        <AnchorPane fx:id="bottomMenu" layoutY="300.0" prefHeight="134.0" prefWidth="645.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-            <children>
-                <TextField fx:id="level" alignment="CENTER" layoutX="390.0" layoutY="6.0" prefHeight="25.0" prefWidth="62.0" text="1" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="193.0" />
-                <Label fx:id="finalCost" alignment="CENTER" layoutX="459.0" layoutY="27.0" prefHeight="25.0" prefWidth="62.0" text="1" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="116.0" />
-                <Button fx:id="add" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="%add" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
-                <Button fx:id="remove" layoutX="541.0" layoutY="39.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="%remove" visible="false" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
-                <Button fx:id="full" layoutX="550.0" layoutY="31.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="%full" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="10.0" />
-                <Label layoutX="464.0" layoutY="31.0" text="%cost" AnchorPane.bottomAnchor="89.0" AnchorPane.rightAnchor="113.0" />
-                <Label layoutX="14.0" layoutY="14.0" text="%complexity" AnchorPane.leftAnchor="6.0" AnchorPane.topAnchor="14.0" />
-                <Label fx:id="complexity" layoutX="91.0" layoutY="14.0" text="" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="14.0" />
-                <Label layoutX="42.0" layoutY="31.0" text="%need_time" AnchorPane.leftAnchor="6.0" AnchorPane.topAnchor="34.0" />
-                <Label fx:id="needTime" layoutX="130.0" layoutY="34.0" prefHeight="16.0" prefWidth="228.0" text="%need_time" AnchorPane.leftAnchor="130.0" AnchorPane.topAnchor="34.0" />
-                <Label layoutX="6.0" layoutY="54.0" prefHeight="16.0" prefWidth="94.0" text="%duration" AnchorPane.leftAnchor="6.0" AnchorPane.topAnchor="54.0" />
-                <Label fx:id="duration" layoutX="100.0" layoutY="55.0" prefHeight="16.0" prefWidth="244.0" text="%duration" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="54.0" />
-                <Label layoutX="14.0" layoutY="80.0" text="%maintaining_cost" AnchorPane.leftAnchor="6.0" AnchorPane.topAnchor="74.0" />
-                <Label fx:id="maintainingCost" layoutX="170.0" layoutY="74.0" prefHeight="16.0" prefWidth="188.0" text="%maintaining_cost" AnchorPane.leftAnchor="170.0" AnchorPane.topAnchor="74.0" />
-                <Label fx:id="createCost" layoutX="170.0" layoutY="90.0" prefHeight="16.0" prefWidth="228.0" text="%create_cost" AnchorPane.leftAnchor="140.0" AnchorPane.topAnchor="94.0" />
-                <Label layoutX="12.0" layoutY="93.0" text="%create_cost" AnchorPane.leftAnchor="6.0" AnchorPane.topAnchor="94.0" />
-                <Label layoutX="12.0" layoutY="112.0" text="%thing" AnchorPane.leftAnchor="6.0" AnchorPane.topAnchor="114.0" />
-                <Label fx:id="thing" layoutX="51.0" layoutY="112.0" prefHeight="16.0" prefWidth="449.0" text="%thing" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="114.0" />
-            </children>
-        </AnchorPane>
       <MenuButton fx:id="typeList" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="%spell_types" AnchorPane.leftAnchor="6.0" />
       <MenuButton fx:id="schoolsList" layoutX="167.0" layoutY="14.0" mnemonicParsing="false" text="%schools" AnchorPane.leftAnchor="170.0" />
     </children>
