Add Alchemy view

--- a/src/ru/gurps/generator/desktop/resources/views/parent.fxml
+++ b/src/ru/gurps/generator/desktop/resources/views/parent.fxml
@@ -87,6 +87,12 @@
                     </content>
                 </Tab>
 
+                <Tab fx:id="alchemiesTab" text="%alchemies">
+                    <content>
+                        <fx:include source="tables/alchemies.fxml" />
+                    </content>
+                </Tab>
+
                 <Tab fx:id="languagesTab" text="%languages">
                     <content>
                         <fx:include source="tables/languages.fxml" />
